--- a/psiagram/app.json
+++ b/psiagram/app.json
@@ -50,7 +50,8 @@
       "router": {},
       "eas": {
         "projectId": "9cf25592-b3b1-47a9-8079-8e7d571985e4"
-      }
+      },
+      "apiUrl": "adres.aws.do.dodania"
     },
     "owner": "psiagram"
   }
