--- a/psiagram/app.json
+++ b/psiagram/app.json
@@ -20,7 +20,8 @@
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "package": "com.psiagram.psiagram"
+      "package": "com.psiagram.psiagram",
+      "usesCleartextTraffic": true
     },
     "web": {
       "output": "static",
