--- a/psiagram/app.json
+++ b/psiagram/app.json
@@ -41,7 +41,13 @@
           }
         }
       ],
-      "expo-secure-store"
+      "expo-secure-store",
+      "expo-build-properties",
+        {
+          "android": {
+            "usesCleartextTraffic": true
+          }
+        }
     ],
     "experiments": {
       "typedRoutes": true,
