--- a/psiagram/package.json
+++ b/psiagram/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.13.2",
     "babel-plugin-react-compiler": "^1.0.0",
     "expo": "~54.0.20",
+    "expo-build-properties": "~1.0.10",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.16",
     "expo-font": "~14.0.9",
